--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -3,7 +3,16 @@ extend layout
 
 block content
   section#area
+    svg#back
+      filter#artifacts
+        feComponentTransfer
+          feFuncA(type='table', tableValues='0 .5 1 1')
+      g(filter='url(#artifacts)')
+
+    svg#draw
 
 block script
+  script(src='/js/delaunay.js')
   script(src='/js/snap.min.js')
+  script(src='/js/background.js')
   script(src='/js/main.js')
