--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -12,6 +12,7 @@ block content
     svg#draw
 
 block script
+  script(src='/js/tweenmax.min.js')
   script(src='/js/delaunay.js')
   script(src='/js/snap.min.js')
   script(src='/js/background.js')
