--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,14 +6,6 @@ block content
     svg#back
       filter#artifacts
         feComponentTransfer
-          feFuncA(type='table', tableValues='0 .5 1 1')
       g(filter='url(#artifacts)')
 
-    svg#draw
-
-block script
-  script(src='/js/tweenmax.min.js')
-  script(src='/js/delaunay.js')
-  script(src='/js/snap.min.js')
-  script(src='/js/background.js')
-  script(src='/js/main.js')
+    svg#mountain
