--- a/views/forgot_password.jade
+++ b/views/forgot_password.jade
@@ -15,4 +15,5 @@ block content
       input(type='hidden', name='crumb', value='#{crumb}')
       button(type='submit') send
 
-block footer
+block script_loader
+block script_game
