--- a/views/join.jade
+++ b/views/join.jade
@@ -17,4 +17,5 @@ block content
       input(type='hidden', name='crumb', value='#{crumb}')
       button(type='submit') go
 
-block footer
+block script_loader
+block script_game
