--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,7 +1,5 @@
 extend layout
 
-block login
-
 block content
   section
     h1 profile
@@ -20,3 +18,5 @@ block content
       input(type='password', name='password', placeholder='password')
       input(type='hidden', name='crumb', value='#{crumb}')
       button(type='submit') update
+
+block script_game
