--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -9,3 +9,17 @@ block content
       g(filter='url(#artifacts)')
 
     svg#mountain
+    svg#land-upper
+    svg#land-lower
+    svg#mining
+  svg#playground
+
+  #mining-area
+    img#vehicle(src='/assets/vehicle.svg')
+
+block footer
+  footer
+    ol#messages
+    form#message(method='post')
+      input(type='text', placeholder='chat here')
+    span#active 0
