--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
     if analytics
       != "<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', '" + analytics + "', 'auto');ga('send', 'pageview');</script>"
 
-  body
+  body(data-room='#{room}', data-user='#{name}')
     header
       if session
         p △
@@ -35,10 +35,15 @@ html
         .content
           block content
 
+    block footer
+
     block script_loader
       script(src='/js/main.js')
     block script_game
+      script(src='/socket.io/socket.io.js')
+      script(src='/js/ws.js')
       script(src='/js/tweenmax.min.js')
-      script(src='/js/delaunay.js')
+      script(src='/js/delaunay.min.js')
       script(src='/js/snap.min.js')
       script(src='/js/background.js')
+      script(src='/js/playground.js')
