--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -12,10 +12,11 @@ block content
     svg#land-upper
     svg#land-lower
     svg#mining
-  svg#playground
+  #playground
 
   #mining-area
     img#vehicle(src='/assets/vehicle.svg')
+    img.hole(src='/assets/hole.svg')
 
 block footer
   footer
