--- a/public/css/main.css
+++ b/public/css/main.css
@@ -282,7 +282,7 @@ footer form {
 }
 
 #vehicle {
-  z-index: 5;
+  z-index: 6;
   background-image: url(../assets/vehicle.svg);
   background-repeat: no-repeat;
 }
@@ -298,4 +298,7 @@ footer form {
   display: inline-block;
   width: 25px;
   height: 25px;
+  z-index: 5;
+  background-image: url(../assets/square-pink.svg);
+  background-repeat: no-repeat;
 }
