--- a/views/forgot_password.jade
+++ b/views/forgot_password.jade
@@ -1,10 +1,8 @@
 extend layout
 
-block login
-
 block content
   section
-    h1 reset your password
+    h1 Reset your password
 
     if error
       p.errors= error
@@ -14,5 +12,3 @@ block content
       input(type='email', name='email')
       input(type='hidden', name='crumb', value='#{crumb}')
       button(type='submit') send
-
-block script
