--- a/views/reset_password.jade
+++ b/views/reset_password.jade
@@ -2,7 +2,7 @@ extend layout
 
 block content
   section
-    h1 create a new password
+    h1 Create a new password
     form(method='post', action='/password/reset')
       h2 enter your new password
       input(type='password', name='password1', required)
@@ -14,5 +14,3 @@ block content
       button(type='submit') send
     if error
       p.errors= error
-
-block script
