--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,4 +1,3 @@
-include mixins
 extend layout
 
 block content
@@ -39,3 +38,8 @@ block footer
     form#message(method='post')
       input(type='text', placeholder='chat here')
     span#active 0
+
+block script
+  script(src='/socket.io/socket.io.js')
+  script(src='/thirdparty.min.js')
+  script(src='/app.bundle.js')
