--- a/views/profile.jade
+++ b/views/profile.jade
@@ -11,7 +11,7 @@ block content
     if message
       p.messages= message
 
-    form(method='post', action='/profile')
+    form(method='post', action='/settings')
       h2 Email
       span= email
       h2 Name
