--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -22,6 +22,9 @@ block content
     #collection
       h2 collection
       ul.items
+    #builder
+      h2 build
+      ul.items
 
 block footer
   footer
