--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -20,8 +20,12 @@ block content
 
   if owner
     #collection
-      h2 collection
+      h2 inventory
       ul.items
+      h2 displayed
+      p.tip Select from the inventory above to display it in your scene.
+      p.tip Click on the item below to place it back into your inventory to build other items.
+      ul.display
     #builder
       h2 build
       ul.items
