draggable elements and visiting features

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -25,10 +25,13 @@ block content
       h2 displayed
       p.tip Select from the inventory above to display it in your scene.
       p.tip Click on the item below to place it back into your inventory to build other items.
-      ul.display
+      ul.displayed
     #builder
       h2 build
       ul.items
+  else
+    #collection
+    #builder
 
 block footer
   footer
