--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,7 +38,7 @@ footer {
   right: 0;
   height: 65px;
   background-color: rgba(1, 1, 1, 0.5);
-  z-index: 9;
+  z-index: 999;
 }
 
 footer form {
@@ -365,13 +365,18 @@ footer form {
   background-repeat: no-repeat;
 }
 
-#builder .items .build {
+#builder .items .build, .displayed li p {
   width: 50px;
   height: 50px;
   display: inline-block;
   background-repeat: no-repeat;
   padding-left: 70px;
   position: relative;
+}
+
+.displayed li p {
+  float: left;
+  padding-left: 10px;
 }
 
 .requirements {
@@ -386,6 +391,19 @@ footer form {
 .buy:hover {
   border-top: 5px solid #d0ff12;
   cursor: pointer;
+}
+
+.displayed {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.display {
+  height: 100px;
+  width: 100px;
+  position: absolute;
 }
 
 /* item images */
