--- a/views/forgot_password.jade
+++ b/views/forgot_password.jade
@@ -1,8 +1,8 @@
 extend layout
 
 block content
-  section
-    h1 Reset your password
+  section.form
+    h1 reset your password
 
     if error
       p.errors= error
