--- a/views/reset_password.jade
+++ b/views/reset_password.jade
@@ -1,7 +1,7 @@
 extend layout
 
 block content
-  section
+  section.form
     h1 Create a new password
     form(method='post', action='/password/reset')
       h2 enter your new password
