--- a/views/index.jade
+++ b/views/index.jade
@@ -1,21 +1,34 @@
 extend layout
 
+
 block content
   svg#landing
   #title TRIANGLES
+  .instructions
+    h2 How to play:
+    ol
+      li Mine for
+       span.boxes boxes
+       | , but careful about hitting
+       span.lava lava bombs
+       | . Those will damage you and then you'll need to wait for your to regenerate every 15 minutes.
+      li Take these boxes and combine them to build other items.
+      li Your mining area will regenerate with new items every 30 minutes.
+      li If you want to put your items on display, you can select one of each type and drag it around into your favorite spot.
 
-  form(method='post', action='/login', class='login')
-    h1 Sign in or&#xa0;
-      a(href='/signup') Join
-    if error
-      p.errors= error
-    h2 Email
-    input(type='email', name='email', placeholder='your@email.com', required)
-    h2 Password
-    input(type='password', name='password', placeholder='password', required)
-    input(type='hidden', name='crumb', value='#{crumb}')
-    button(type='submit') sign in
-    a(href='/password/forgot', class='forgot') forgot password?
+  section.form
+    form(method='post', action='/login', class='login')
+      h1 Sign in or&#xa0;
+        a(href='/signup') Join
+      if error
+        p.errors= error
+      h2 Email
+      input(type='email', name='email', placeholder='your@email.com', required)
+      h2 Password
+      input(type='password', name='password', placeholder='password', required)
+      input(type='hidden', name='crumb', value='#{crumb}')
+      button(type='submit') sign in
+      a(href='/password/forgot', class='forgot') forgot password?
 
 block script
   script(src='/thirdparty.min.js')
