--- a/public/css/main.css
+++ b/public/css/main.css
@@ -487,3 +487,7 @@ footer form {
 .neon-dog-1 {
   background-image: url(../assets/dog1.svg);
 }
+
+.neon-fire {
+  background-image: url(../assets/fire.svg);
+}
