--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -67,8 +67,16 @@ body {
   content: '';
   width: 30px;
   height: 30px;
-  background: transparent url(../assets/square-pink.svg) no-repeat;
+  background: transparent url(../assets/square.svg) no-repeat;
   display: inline-block;
+  filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px #fff)
+        drop-shadow(0 0 5px #f31de6)
+        drop-shadow(0 0 8px rgba(243, 29, 230, 0.5));
+  -webkit-filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px #fff)
+        drop-shadow(0 0 5px #f31de6)
+        drop-shadow(0 0 8px rgba(243, 29, 230, 0.5));
 }
 
 .instructions span.lava::after {
