--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,13 @@
 /* main styles */
 
+body {
+  background-color: #111;
+}
+
 #area {
   height: 2592px;
-  width: 2400px;
+  width: 1200px;
+  overflow: hidden;
 }
 
 .login {
@@ -13,6 +18,13 @@
   color: #f00;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+#game {
+  width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
 }
 
 #notification {
@@ -152,16 +164,35 @@ footer form {
 }
 
 #mountain {
-  width: 1400px;
+  width: 1200px;
   height: 445px;
   position: absolute;
-  left: 100px;
+  left: 90px;
   top: 85px;
   z-index: 2;
+  filter: drop-shadow(0 0 1px rgba(243, 29, 230, 0.5))
+        drop-shadow(0 0 3px rgba(1, 1, 255, 0.5))
+        drop-shadow(0 0 5px rgba(243, 29, 230, 0.5))
+        drop-shadow(0 0 8px rgba(243, 29, 230, 0.5));
+  -webkit-filter: drop-shadow(0 0 1px rgba(243, 29, 230, 0.5))
+        drop-shadow(0 0 3px rgba(1, 1, 255, 0.5))
+        drop-shadow(0 0 5px rgba(243, 29, 230, 0.5))
+        drop-shadow(0 0 8px rgba(243, 29, 230, 0.5));
+}
+
+#land-upper {
+  filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px rgba(1, 1, 255, 0.5))
+        drop-shadow(0 0 5px rgba(0, 184, 137, 0.5))
+        drop-shadow(0 0 8px rgba(0, 184, 137, 0.5));
+  -webkit-filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px rgba(1, 1, 255, 0.5))
+        drop-shadow(0 0 5px rgba(0, 184, 137, 0.5))
+        drop-shadow(0 0 8px rgba(0, 184, 137, 0.5));
 }
 
 #land-upper, #land-lower {
-  width: 2400px;
+  width: 1200px;
   height: 500px;
   position: absolute;
   left: 0;
@@ -171,21 +202,60 @@ footer form {
 
 #land-lower {
   top: 700px;
+  filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px rgba(1, 1, 1, 0.5))
+        drop-shadow(0 0 5px rgba(0, 184, 137, 0.5))
+        drop-shadow(0 0 8px rgba(0, 184, 137, 0.5));
+  -webkit-filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px rgba(1, 1, 1, 0.5))
+        drop-shadow(0 0 5px rgba(0, 184, 137, 0.5))
+        drop-shadow(0 0 8px rgba(0, 184, 137, 0.5));
 }
 
 #mining {
   position: absolute;
   top: 1000px;
-  width: 2400px;
+  width: 1200px;
   height: 1600px;
   z-index: 4;
+  filter: drop-shadow(0 0 1px #006ebd)
+        drop-shadow(0 0 3px rgba(1, 1, 1, 0.5))
+        drop-shadow(0 0 15px rgba(0, 107, 255, 0.5))
+        drop-shadow(0 0 22px rgba(0, 107, 255, 0.5));
+    -webkit-filter: drop-shadow(0 0 1px #006ebd)
+          drop-shadow(0 0 3px rgba(1, 1, 1, 0.5))
+          drop-shadow(0 0 15px rgba(0, 107, 255, 0.5))
+          drop-shadow(0 0 22px rgba(0, 107, 255, 0.5));
 }
-
+/*
+@keyframes mining {
+  from {
+    filter: drop-shadow(0 0 1px #006ebd)
+        drop-shadow(0 0 3px #111)
+        drop-shadow(0 0 15px rgba(0, 107, 255, 0.5))
+        drop-shadow(0 0 22px rgba(0, 107, 255, 0.5));
+    -webkit-filter: drop-shadow(0 0 1px #006ebd)
+          drop-shadow(0 0 3px #111)
+          drop-shadow(0 0 15px rgba(0, 107, 255, 0.5))
+          drop-shadow(0 0 22px rgba(0, 107, 255, 0.5));
+  }
+  to {
+    filter: drop-shadow(0 0 1px #006ebd)
+        drop-shadow(0 0 3px #111)
+        drop-shadow(0 0 15px rgba(0, 107, 1, 0.5))
+        drop-shadow(0 0 22px rgba(0, 107, 1, 0.5));
+    -webkit-filter: drop-shadow(0 0 1px #006ebd)
+          drop-shadow(0 0 3px #111)
+          drop-shadow(0 0 15px rgba(0, 107, 1, 0.5))
+          drop-shadow(0 0 22px rgba(0, 107, 1, 0.5));
+  }
+}
+*/
 #playground {
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 2400px;
+  width: 1200px;
   height: 1199px;
   z-index: 7;
 }
@@ -194,7 +264,7 @@ footer form {
   position: absolute;
   left: 0;
   top: 1200px;
-  width: 2400px;
+  width: 1200px;
   height: 1400px;
   z-index: 7;
 }
